# invariant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
invariant-cli/: Cargo.toml
invariant-cli/src/: main.rs
invariant-core/: Cargo.toml
invariant-core/examples/: debug_python.rs
invariant-core/src/: analyzer.rs  bridge.rs  config.rs  facts.rs  git.rs  lib.rs  parser.rs  patch.rs  types.rs
invariant-core/tests/: analyzer_tests.rs  bridge_onboard_test.rs  e2e_test.rs
scripts/: publish-crates.sh  test_publish-crates.sh
