[workspace]
members = [
    "invariant-core",
    "invariant-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["DataGrout AI"]
license = "Elastic-2.0"
repository = "https://github.com/datagrout/invariant"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-ruby = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
walkdir = "2.5"
ignore = "0.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# MCP / Conduit
datagrout-conduit = { version = "0.5.0", features = ["registration", "onramp"] }

# Git integration
git2 = "0.19"

# Config
toml = "0.8"
