[package]
name = "invariant-core"
description = "Multi-language semantic code analysis library — tree-sitter fact extraction for DataGrout Invariant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# MCP / Conduit
datagrout-conduit.workspace = true

# Parsing
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-prolog.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Git integration
git2.workspace = true

# Utilities
sha2.workspace = true
uuid.workspace = true
walkdir.workspace = true
ignore.workspace = true
toml.workspace = true

[dev-dependencies]
tokio-test = "0.4"
